# AI-Notes

./: README.md
ML/: readme.md
ML/card-classification/: pyproject.toml
RAG/: readme.md
RAG/guessing_game/: game.ipynb
RAG/langchain_ollama/src/: __main__.py
_personal/course/gen_ai/day_1/: .env_copy  pyproject.toml
_personal/course/gen_ai/day_1/src/lab_1/pl/: lab_1.ipynb
_personal/course/gen_ai/day_1/src/lab_2/pl/: lab_2.ipynb
_personal/course/gen_ai/day_1/src/lab_3/pl/: lab_3.ipynb
_personal/course/gen_ai/day_1/src/lab_4/pl/: lab_4.ipynb
_personal/course/gen_ai/day_2/: pyproject.toml
_personal/course/gen_ai/day_2/src/lab_1/pl/: lab_1.ipynb
_personal/course/gen_ai/day_2/src/lab_3/pl/: lab_3.ipynb
_personal/course/gen_ai/day_2/src/lab_4/pl/: lab_4.ipynb
_personal/course/gen_ai/day_2/src/lab_5/pl/: course_day_2_lab_5.ipynb  lab_5.ipynb
_personal/course/gen_ai/day_2/src/lab_6/pl/: lab_6.ipynb
_personal/course/gen_ai/day_2/src/lab_7/pl/: course_day_2_lab_7.ipynb
_personal/course/gen_ai/day_3/: pyproject.toml
_personal/course/gen_ai/day_3/src/lab_1/pl/: lab_1.ipynb
_personal/course/gen_ai/day_3/src/lab_2/pl/: lab_2.ipynb
_personal/course/gen_ai/day_3/src/lab_3/pl/: lab_3.ipynb
_personal/course/gen_ai/day_3/src/lab_4/pl/: course_day_3_lab_4.ipynb
_personal/course/gen_ai/day_3/src/lab_5/pl/: lab_5.ipynb
_personal/course/gen_ai/day_3/src/lab_6/pl/: lab_6.ipynb
_personal/course/gen_ai/day_3/src/lab_7/pl/: lab_7.ipynb
_personal/course/gen_ai/day_4/: pyproject.toml
_personal/course/gen_ai/day_4/src/lab_1/pl/: lab_1.ipynb
_personal/course/gen_ai/day_4/src/lab_2/pl/: lab_2.ipynb
_personal/course/gen_ai/day_4/src/lab_3/pl/: lab_3_transformers.ipynb
_personal/course/gen_ai/day_4/src/lab_4/pl/: lab_4.ipynb
_personal/course/gen_ai/day_4/src/lab_5/pl/: lab_5.ipynb  lb_5_ollama.ipynb  podcast_script.txt
_personal/course/gen_ai/day_5/: pyproject.toml
_personal/course/gen_ai/day_5/src/lab_3/pl/: lab_3.ipynb
_personal/course/gen_ai/day_6/: pyproject.toml
_personal/course/gen_ai/day_6/src/lab_2/pl/: lab_2.ipynb
_personal/course/gen_ai/day_6/src/lab_3/pl/: lab_3.ipynb
_personal/course/gen_ai/day_6/src/lab_4/pl/: lab_4.ipynb
_personal/course/gen_ai/day_6/src/lab_5/pl/: lab_5.ipynb
_personal/course/gen_ai/day_6/src/lab_6/pl/: lab_6.ipynb
_personal/course/gen_ai/day_6/src/lab_7/pl/: lab_7.ipynb
_sandbox/chatbot/: pyproject.toml
_sandbox/chatbot/src/: chat.ipynb
_sandbox/data_visualization_course/: pyproject.toml  readme.md
_sandbox/data_visualization_course/src/: _final_project.ipynb
_sandbox/deep_researcher_local/: .env_copy  README.md  testing_model.ipynb
_sandbox/deep_researcher_local/src/: __init__.py
_sandbox/deep_researcher_local/src/assistant/: __init__.py  configuration.py  graph.py  model.py  state.py  utils.py
_sandbox/deepseek_task/: pyproject.toml
_sandbox/guessing_game/: game.ipynb
_sandbox/langchain_ollama/: pyproject.toml
_sandbox/langchain_openai/src/: basic.ipynb
_sandbox/pacer_framework/: readme.md  readme_pl.md
_sandbox/pandas_kaggle/: pyproject.toml
_sandbox/pandas_kaggle/src/: 01_create_read_write.ipynb  01_exercise_create_read_write.ipynb  02_exercise_index_select_assign.ipynb  02_index_select_assign.ipynb  03_exercise_summary_functions_and_maps.ipynb  03_summary_functions_and_maps.ipynb  04_exercise_grouping_sorting.ipynb  04_grouping_sorting.ipynb  05_data_missing_values.ipynb  05_exercise_data_missing_value.ipynb  06_exercise_renaming_and_combining.ipynb  06_renaming_and_combining.ipynb
deep_researcher_local/: langgraph.json  pyproject.toml
deep_researcher_local/src/: __main__.py
deep_researcher_local/src/assistant/: nodes.py  prompts.py
deepseek_task/src/: task.ipynb
embedding/: models.md  readme.md  readme_pl.md
embedding/creeate_model/: pyproject.toml
embedding/creeate_model/src/: contrastive-learning.ipynb
embedding/creeate_model/src/model/: number_predictor.keras
guessing_game/: pyproject.toml
langchain_ollama/: .gitignore  pyproject.toml
langchain_ollama/src/: advanced.ipynb  basic.ipynb
langchain_openai/: pyproject.toml  readme.md
langchain_openai/src/: basic.ipynb
prompting/: pyproject.toml  readme.md
prompting/src/: chain-of-thought-manual.md  chain-of-thought-zero-shot.md  chain-of-thought.md  few-shot.md  self-consistency.md  zero-shot.ipynb  zero-shot.md
vector-database/: pyproject.toml  readme.md
vector-database/src/: vectore-database.ipynb
vector-database/src/basic/: vector_database_en.ipynb  vector_database_pl.ipynb
vector-database/src/example/: vectore-database.ipynb
