[project]
name = "deep-researcher-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.15",
    "langchain-ollama>=0.2.2",
    "langgraph>=0.2.67",
    "tavily-python>=0.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "langgraph-api>=0.0.16",
    "langgraph-cli[inmem]>=0.1.68",
    "ruff>=0.9.3",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["assistant"]

[tool.setuptools.package-dir]
"assistant" = "src/assistant"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
"*.ipynb" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
