[project]
name = "data_visualization_course"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com"},
]
dependencies = ["pandas>=2.2.3", "Ipykernel>=6.29.5", "matplotlib>=3.10.0", "seaborn>=0.13.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
