[project]
name = "langchain_ollama"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com"},
]
dependencies = ["langchain-ollama>=0.2.2", "langchain>=0.3.14", "pytube>=15.0.0", "openai-whisper>=20240930", "yt-dlp>=2025.1.15", "langchain-community>=0.3.14", "sklearn>=0.0.post12", "scikit-learn>=1.6.1", "docarray>=0.40.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
jupiter = [
    "ipykernel>=6.29.5",
]
