[project]
name = "course_day_2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com"},
]
dependencies = ["ipykernel>=6.29.5", "transformers>=4.48.3", "diffusers>=0.32.2", "accelerate>=1.3.0", "safetensors>=0.5.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
