[project]
name = "day_3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com"},
]
dependencies = ["ipykernel>=6.29.5", "transformers>=4.49.0", "torch>=2.6.0", "torchvision>=0.21.0", "torchaudio>=2.6.0", "tqdm>=4.67.1", "gradio>=5.16.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
