[project]
name = "day_4"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com" }]
dependencies = ["audiocraft>=1.3.0", "torch>=2.1.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
